--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -50,6 +50,7 @@ frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, g
 # Local Dependencies
 pallet-template = { version = "4.0.0-dev", default-features = false, path = "../pallets/template" }
 pallet-poe = { version = "1.0.0", default-features = false, path = "../pallets/poe" }
+pallet-kitties = { version = "1.0.0", default-features = false, path = "../pallets/kitties" }
 
 [build-dependencies]
 substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
@@ -88,6 +89,7 @@ std = [
 	"sp-transaction-pool/std",
 	"sp-version/std",
 	"pallet-poe/std",
+	"pallet-kitties/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
